karl package Changelog
======================

Unreleased
----------

- ...

3.20 (2010-03-04)
-----------------

- Updated bootstrap to provide new 'name' parameter to add_intranet_view when
  creating offices.
  
- LP #530966, CSS fix for profile bug.  (Derek via Paul)

3.19 (2010-03-02
----------------

- LP #526574: Fixed the workflow association with the forum topic add and edit
  views so the creator of the topic will have edit / delete permissions;
  added evolve6.py function to fix existing topics. (rafrombrc)

- LP #497017: Added a separate 'name' field to the intranets add form
  (rafrombrc)

- LP #528514: Specified the right widget type for blog post 'send email?'
  field, added CSS to make the formish title fields the right size. (rafrombrc)

- Fixed bug with people import where updating a profile might use a different
  user id than the profile.__name__.

- LP #522179: Added template slots and admin UI for generating announcement
  blurbs that will be exposed to all site users. (rafrombrc)

- LP #523280: Rejigger formish views and templates to put page_title value in
  TemplateAPI object instead of passing it directly into the template
  (rafrombrc)

- LP #520541 Updated adduser console script to also create a user profile.
  Added checks to avoid clobbering an existing user.

3.18 (2010-02-22)
-----------------

- Fix for memory leak in mailin process.

- UI fixes.  (ree)


3.17 (2010-02-17)
-----------------

- LP #503451: Calendar: Week view does not display some events

- Fixed calendar list view to correctly show "all-day" for all-day events.

- LP #522173: Add a "down for maintenance" HTML page in views/static
  with relative links to styling and images which can be served
  directly by Apache.

- When importing users, using cico, any space characters in the user's id are
  now elided.

- LP #523333: find_contiguous_slot error error in calendar

3.16 (2010-02-12)
-----------------
